<resources>
    <string name="app_name">KiTeX</string>

    <string name="label_about">About</string>
    <string name="label_keyboard">KiTeX Keyboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_share">Share Formula</string>

    <string name="diag_mediaPermission_title">Permission Explanation</string>
    <string name="diag_mediaPermission_msg">The permission for writing to external storage is required to store the compiled images and send them to the text field currently editing. These images are saved in an own directory. No other data is read.</string>
    <string name="diag_mediaPermission_btn">OK</string>

    <string name="diag_permissionWarning_title">Permission Warning</string>
    <string name="diag_permissionWarning_msg">Writing to external storage has been denied. The app will crash when selecting the keyboard.</string>
    <string name="diag_permissionWarning_btn_askAgain">Ask Again</string>
    <string name="diag_permissionWarning_btn_later">Later</string>
    <string name="diag_permissionWarning_btn_settings">Settings</string>
    <string name="diag_permissionWarning_btn_ignore">Ignore</string>

    <string name="btn_settings">Settings</string>
    <string name="btn_keyboardSettings">Keyboard Settings</string>
    <string name="btn_about">About</string>
    <string name="btn_permission_error">Error: Permission Denied</string>
    <string name="hint_test">Test it!</string>

    <string name="msg_compileCancelled">Compilation was cancelled.</string>
    <string name="msg_compileFinished">Compilation finished.</string>
    <string name="msg_compileStarted">Compilation has been started.</string>
    <string name="msg_invalidEquation">Given formula is invalid!</string>
    <string name="msg_serverError">A fatal server error occurred!</string>
    <string name="msg_commitContentNotSupported">The input field does not support images.</string>

    <string name="about_title_license">License</string>
    <string name="about_librariesSeeBelow">For libraries see below.</string>
    <string name="about_title_libraries">Libraries</string>
    <string name="about_libraries_licenses_apachev2">Apache License, Version 2.0</string>
    <string name="about_libraries_okhttp">OkHttp</string>

    <string name="keylabel_permission_error">Permissions Denied</string>
    <string name="keylabel_goto_settings">Settings</string>
    <string name="keylabel_refresh_info">Restart the Keyboard afterwards</string>


    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_keyboard_layout_title">Keyboard Layout</string>
    <string-array name="pref_keyboard_layout_titles">
        <item>English (QWERTY)</item>
        <item>German (QWERTZ)</item>
    </string-array>
    <string-array name="pref_keyboard_layout_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Compilation settings -->
    <string name="pref_header_compilation">Compilation</string>

    <string name="pref_copy_to_clipboatd_title">Handling of Code after Compilation</string>
    <string-array name="pref_copy_to_clipboard_titles">
        <item>Do Nothing</item>
        <item>Copy to Clipboard</item>
        <item>Discard</item>
    </string-array>
    <string-array name="pref_copy_to_clipboard_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
